--- a/index.html
+++ b/index.html
@@ -807,7 +807,7 @@
        <!---------banner------->
        <div class="Banner">
             <div class="banner-content">
-                <p>Delivering services</p>
+                <p>Delivery services</p>
                 <h2>Up to 50% Off - All collections</h2>
                 <button>Buy now</button>
             </div>
