--- a/index.html
+++ b/index.html
@@ -665,7 +665,7 @@
        <!---------banner------->
        <div class="Banner">
             <div class="banner-content">
-                <p>Delivering services</p>
+                <p>Delivery services</p>
                 <h2>Up to 50% Off - All collections</h2>
                 <button>Buy now</button>
             </div>
@@ -814,7 +814,7 @@
                 <h2>Links</h2>
                 <p class="first-link"><a href="#">Home</a></p>
                 <p><a href="#blog">Blog</a></p>
-                <p><a href="#shop">collections</a></p>
+                <p><a href="#shop">Collections</a></p>
                 <p><a href="#about">About Us</a></p>
             </div>
             <div class="footer-media">
